removing config file from project

--- a/jenkair.html
+++ b/jenkair.html
@@ -4,8 +4,11 @@
         <script src="lib/deps/AIRAliases.js"></script>
         <script>
             var appLoad = function() {
-                var config = air.File.applicationStorageDirectory.resolvePath("lib/data/config.json");
-                alert(config);
+                var configFile = air.File.applicationStorageDirectory.resolvePath("lib/data/config.json");
+                var stream = new air.FileStream();
+                stream.open(configFile, air.FileMode.READ);
+                var configData = stream.readMultiByte(stream.bytesAvailable, air.File.systemCharset);
+                alert(configData);
             }
         </script>
     </head>
